# Vicarana

./: .gitignore  README.md  pyproject.toml
examples/: rl_loop_integration.py  verify_single.py
referee/: __init__.py
referee/anticheat/: __init__.py  base.py  env_snooping.py  hardcoded_output.py  shortcut_algo.py
referee/core/: pipeline.py  protocols.py  registry.py  result.py
referee/plugins/cuda/: anticheat_cuda.py  compiler.py  plugin.py  runner.py
referee/plugins/cuda/problems/: matmul.py  reduce.py  vector_add.py
referee/sandbox/: policies.py  runner.py
referee/scoring/: scorer.py
referee/utils/: hashing.py  timing.py
tests/: colab_test_notebook.md  conftest.py  test_pipeline.py  test_sandbox.py  test_scoring.py  test_verify_e2e.py
tests/fixtures/: bad_vector_add_zero.cu  cheating_cublas.cu  cheating_env_snoop.cu  cheating_hardcoded.cu  honest_vector_add.cu  lazy_vector_add.cu
tests/test_anticheat/: test_env_snooping.py  test_hardcoded.py  test_shortcut.py
tests/test_plugins/test_cuda/: test_compiler.py  test_problems.py  test_runner.py
